auto-test/tests/chapter_18/invalid_types/invalid_incomplete_structs/assign_to_incomplete_var.c
struct s;

extern struct s x;
extern struct s y;

int main(void) {
  x = y; 
  return 0;
}